# elegoo-homeassistant

./: .devcontainer.json  .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  Makefile  README.md  SPOOLMAN.md  TESTING.md  __init__.py  auto_translate_multithreading.py  cc2_debug_20260202_193032.json  config.json  config.yaml  debug.py  elegoo_ws.py  hacs.json  main.py  printer.py  pyproject.toml  pyriteconfig.json  requirements.txt  response.md  sensor.py
.github/workflows/: claude.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  gemini.yaml  lint.yml  release.yml  test.yml  validate.yml
blueprints/automation/elegoo_printer/: elegoo_printer_progress.yaml
config/: configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
config/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  homeassistant.exposed_entities  http  http.auth  person
custom_components/elegoo_ha/: __init__.py  config_flow.py  manifest.json  models.py  printer.py
custom_components/elegoo_printer/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  data.py  debug.py  definitions.py  entity.py  fan.py  image.py  light.py  manifest.json  models.py  number.py  printer.py  select.py  sensor.py  services.yaml  switch.py
custom_components/elegoo_printer/cc2/: __init__.py  client.py  const.py  discovery.py  gcode_proxy.py  models.py
custom_components/elegoo_printer/elegoo/: __init__.py  const.py  debug.py  elegoo_printer.py  enums.py  models.py  printer.py
custom_components/elegoo_printer/elegoo_mqtt/: client.py  const.py  exceptions.py  server.py
custom_components/elegoo_printer/elegoo_sdcp/: __init__.py  client.py  debug.py  elegoo_printer.py  exceptions.py  server.py
custom_components/elegoo_printer/models/: enums.py  print_history_detail.py  printer.py  protocol.py  video.py
custom_components/elegoo_printer/mqtt/: __init__.py  bridge.py  client.py  const.py  file_server.py  server.py
custom_components/elegoo_printer/sdcp/: __init__.py  const.py  exceptions.py
custom_components/elegoo_printer/tests/: test_api_discovery.py  test_camera.py  test_canvas_detection.py  test_config_flow_mqtt_options.py  test_config_flow_websocket_options.py  test_enums.py  test_extruder_sensors.py  (+4 more)
docs/: CC2_PROTOCOL.md
docs/plans/: 2025-06-25-sync-printer-attributes.md  2026-06-29-cc2-improvements.md  2026-07-05-camera-rtsp-teardown.md  README.md
fff/: config  index  packed-refs
models/: status.py
scripts/: README_CC2_EXTRACTION.md  cc2_mqtt_debug.py  debug  debug.py  devcontainer  devcontainer.sh  extract_cc2_data.py  start  test_cc2_printer.py  test_mqtt_printer.py  test_server.py
(+78 files in other folders)
