[project]
name = "elegoo_printer"
version = "2.2.1b1"
requires-python = ">=3.12"
description = "Home Assistant Addon for Elegoo Printers"
dependencies = [
    "colorlog>=6.9.0",
    "loguru>=0.7.3",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.9.10",
]
[tool.ruff]
target-version = "py313"
exclude = [
  "scripts",
  "debug.py",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pytest.ini_options]
pythonpath = [
  "."
]
